2005-12-28  Roger Leigh  <rleigh@debian.org>

	* Convert all inline gtk-doc documentation to Doxygen format, and
	move it from the sources into the headers.

2005-12-26  Roger Leigh  <rleigh@debian.org>

	* Convert all classes to use runtime_error_custom, and remove all
	error code enums.

	* schroot/sbuild-error.h: Remove Exception class, and replace with
	a runtime_error base class, and runtime_error_custom<> template
	class (templated on class using it), which no longer has an error
	code member (the error code was a GError holdover which was not
	used).

2005-12-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c:
	(run_impl, setup_chroot): Add mising format strings.

2005-12-26  Roger Leigh  <rleigh@debian.org>

	* Remove typedef'd enums in favour of plain enums.

2005-12-26  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc (is_group_member): Use new rather than
	C99 VLAs.
	(setup_chroot): setup_type_string is a std::string, rather than a
	char *.

	* schroot/sbuild-config.cc (validate_chroots): Return bad_chroots.

	* schroot/sbuild-chroot.cc (read_keyfile): Initialise bool values
	to quell compiler warning.

	* schroot/sbuild-auth.h (ErrorCode): Remove trailing comma.

	* schroot/sbuild-auth.cc
	(auth_conv): Use signed rather than unsigned int in for loops.
	(Auth::Auth): Correct member initialisation order.

	* schroot/Makefile.am (AM_CXXFLAGS): Add additional flags: -Wall
	-Wcast-align -Wwrite-strings -pedantic -Wcast-qual
	-Wredundant-decls.

2005-12-25  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Remove checks for Glib.  Glib is now completely
	removed from the sources.

	* schroot/Makefile.am (libsbuild_la_LIBADD): Remove Glib library.

	* schroot/schroot-releaselock.cc: Convert from GOption to
	Boost.Program_options.

	* schroot/schroot-options.cc: Convert from GOption to
	Boost.Program_options.

2005-12-24  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-util.cc: Remove format_string.
