@@ -1,6 +1,4 @@
-/* sbuild-log - sbuild message logging
- *
- * Copyright © 2005  Roger Leigh <rleigh@debian.org>
+/* Copyright © 2005  Roger Leigh <rleigh@debian.org>
  *
  * serror is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by
